Project import generated by Copybara.
GitOrigin-RevId: 8374e4c181dcd3c6181edca5d545130059e60fb1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ theme:
     - navigation.instant
     - navigation.tracking
     - navigation.top
+    - navigation.footer
     - content.code.copy
 extra_css:
   - stylesheets/extra.css
