--- a/.github/workflows/build-ingress.yml
+++ b/.github/workflows/build-ingress.yml
@@ -73,14 +73,6 @@ jobs:
         if: steps.check-version.outputs.exists == 'false'
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        if: steps.check-version.outputs.exists == 'false'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build Docker image (no push)
         if: steps.check-version.outputs.exists == 'false'
         uses: docker/build-push-action@v5
@@ -90,6 +82,19 @@ jobs:
           tags: ${{ steps.docker-tags.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Save Docker image
+        if: steps.check-version.outputs.exists == 'false'
+        run: |
+          docker save ${{ steps.docker-tags.outputs.tags }} -o image.tar
+
+      - name: Upload Docker image artifact
+        if: steps.check-version.outputs.exists == 'false'
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image
+          path: image.tar
+          retention-days: 1
   test-integration:
     needs: build-ingress
     runs-on: ubuntu-latest
@@ -146,6 +151,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image
+
+      - name: Load Docker image
+        run: |
+          docker load -i image.tar
+
       - name: Prepare versioned compose files
         run: |
           INGRESSVER=${{ needs.build-ingress.outputs.ingressver }}
@@ -153,14 +167,10 @@ jobs:
           cp build-context/compose.all.yml compose.all.${INGRESSVER}.yml
           echo "Prepared compose.all.${INGRESSVER}.env and compose.all.${INGRESSVER}.yml"
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: build-context
-          push: true
-          tags: ghcr.io/lthompson-keysight/kai-dc-builder:${{ needs.build-ingress.outputs.ingressver }},ghcr.io/lthompson-keysight/kai-dc-builder:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/lthompson-keysight/kai-dc-builder:${{ needs.build-ingress.outputs.ingressver }}
+          docker push ghcr.io/lthompson-keysight/kai-dc-builder:latest
 
       - name: Create GitHub Release (main branch)
         if: github.ref == 'refs/heads/main'
