keep intermediate image

--- a/.github/workflows/build-ingress.yml
+++ b/.github/workflows/build-ingress.yml
@@ -78,6 +78,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: build-context
+          load: true
           push: false
           tags: ${{ steps.docker-tags.outputs.tags }}
           cache-from: type=gha
